--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto = update
+logging.level.org.springframework.security=DEBUG
