Added add parent part

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://database-student-management.c1ow8kcuun6t.eu-north-1.rds.amazonaws.com:3306/student_management?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/student_management?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=!QAZ2wsx1Q
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
